Semester 3 (fall)/OOP 244/ws6/Workshop 6/errors.txt
HealthCard.cpp:124:125: error: default argument given for parameter 1 of ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
  HealthCard::HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {})
                                                                                                                             ^
In file included from HealthCard.cpp:3:0:
HealthCard.h:18:9: error: after previous specification in ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
         HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {});
         ^
HealthCard.cpp:124:125: error: default argument given for parameter 2 of ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
  HealthCard::HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {})
                                                                                                                             ^
In file included from HealthCard.cpp:3:0:
HealthCard.h:18:9: error: after previous specification in ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
         HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {});
         ^
HealthCard.cpp:124:125: error: default argument given for parameter 3 of ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
  HealthCard::HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {})
                                                                                                                             ^
In file included from HealthCard.cpp:3:0:
HealthCard.h:18:9: error: after previous specification in ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
         HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {});
         ^
HealthCard.cpp:124:125: error: default argument given for parameter 4 of ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
  HealthCard::HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {})
                                                                                                                             ^
In file included from HealthCard.cpp:3:0:
HealthCard.h:18:9: error: after previous specification in ‘sdds::HealthCard::HealthCard(const char*, long long int, const char*, const char*)’ [-fpermissive]
         HealthCard(const char* name = nullptr, long long number = 0, const char vCode[] = {}, const char sNumber[] = {});
         ^
